adding favicon, disabling post links

--- a/themes/occb/layouts/partials/summary-with-image.html
+++ b/themes/occb/layouts/partials/summary-with-image.html
@@ -20,7 +20,8 @@
     {{ end }}
     <div class="absolute flex flex-col inset-0 items-center justify-center">
       <h3>
-        <a href="{{.RelPermalink}}" class="text-white text-2xl">
+        <!-- <a href="{{.RelPermalink}}" class="text-white text-2xl"> -->
+        <a href="#" class="text-white text-2xl">
           {{ .Title }}
         </a>
       </h3>
