--- a/themes/occb/layouts/partials/summary-with-image.html
+++ b/themes/occb/layouts/partials/summary-with-image.html
@@ -16,7 +16,7 @@
     {{ if $featured_image }} 
     {{/* Trimming the slash and adding absURL make sure the image works no matter where our site lives */}} 
       {{ $featured_image := (trim $featured_image "/") | absURL }}
-      <img src="{{ $featured_image }}" class="w-full" alt="image from {{ .Title }}" />
+      <img src="{{ $featured_image }}" class="img w-full" alt="image from {{ .Title }}" />
     {{ end }}
     <div class="absolute flex flex-col inset-0 items-center justify-center">
       <h3>
