--- a/themes/occb/layouts/partials/summary-with-image.html
+++ b/themes/occb/layouts/partials/summary-with-image.html
@@ -18,10 +18,10 @@
       {{ $featured_image := (trim $featured_image "/") | absURL }}
       <img src="{{ $featured_image }}" class="img w-full" alt="image from {{ .Title }}" />
     {{ end }}
-    <div class="absolute flex flex-col inset-0 items-center justify-center">
+    <div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
       <h3>
         <!-- <a href="{{.RelPermalink}}" class="text-white text-2xl"> -->
-        <a href="#" class="text-white text-2xl">
+        <a href="#" class="text-white text-3xl">
           {{ .Title }}
         </a>
       </h3>
