--- a/themes/occb/layouts/partials/summary-with-image.html
+++ b/themes/occb/layouts/partials/summary-with-image.html
@@ -1,30 +1,29 @@
 {{ $featured_image := partial "func/GetFeaturedImage.html" . }}
-<article>
+
+<a href="#" class="block relative overflow-hidden">
+  {{ if $featured_image }} 
+  {{/* Trimming the slash and adding absURL make sure the image works no matter where our site lives */}} 
+  {{ $featured_image := (trim $featured_image "/") | absURL }}
+  <img
+    src="{{ $featured_image }}"
+    class="w-full h-full transform transition duration-500 hover:scale-105"
+    alt="image from {{ .Title }}"
+  />
+  {{ end }}
   <div
     class="
-      relative
-      overflow-hidden
-      img
-      h-full
-      w-full
-      transform
-      transition
-      duration-500
-      hover:scale-105
+      absolute
+      flex flex-col
+      inset-0
+      items-center
+      justify-center
+      bg-black bg-opacity-25
+      pointer-events-none
     "
   >
-    {{ if $featured_image }} 
-    {{/* Trimming the slash and adding absURL make sure the image works no matter where our site lives */}} 
-      {{ $featured_image := (trim $featured_image "/") | absURL }}
-      <img src="{{ $featured_image }}" class="img w-full" alt="image from {{ .Title }}" />
-    {{ end }}
-    <div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
-      <h3>
-        <!-- <a href="{{.RelPermalink}}" class="text-white text-2xl"> -->
-        <a href="#" class="text-white text-3xl">
-          {{ .Title }}
-        </a>
-      </h3>
-    </div>
+    <h3 class="text-white text-3xl p-5 text-center">
+      <!-- <a href="{{.RelPermalink}}" class="text-white text-2xl"> -->
+      {{ .Title }}
+    </h3>
   </div>
-</article>
+</a>
