--- a/themes/occb/layouts/_default/single.html
+++ b/themes/occb/layouts/_default/single.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
 <article class="px-6 mx-auto mb-16 prose text-gray-700 justify-self-center sm:px-4 md:px-0 lg:prose-lg">
     <h1>{{ .Title }}</h1>
+    {{ partial "post-metadata" . }}
     {{ .Content }}
 </article>
 {{ end }}
