adding first glightbox integration

--- a/themes/occb/layouts/_default/baseof.html
+++ b/themes/occb/layouts/_default/baseof.html
@@ -9,5 +9,6 @@
         </main>
         {{- partial "dev-parameters.html" . -}}
         {{- partial "footer.html" . -}}
+        {{- partial "glightbox.html" . -}}
     </body>
 </html>
