--- a/themes/occb/assets/css/styles.css
+++ b/themes/occb/assets/css/styles.css
@@ -4,5 +4,7 @@
 @import "node_modules/tailwindcss/components";
 /* Site Specific */
 @import "assets/css/site";
+/* Using GLightbox from https://github.com/biati-digital/glightbox */
+@import "assets/css/glightbox.min";
 /* Tailwind's utility classes - generated based on config file */
 @import "node_modules/tailwindcss/utilities";
