--- a/themes/occb/layouts/partials/head.html
+++ b/themes/occb/layouts/partials/head.html
@@ -22,6 +22,7 @@
         {{- $styles := $styles| minify | fingerprint | resources.PostProcess -}}
     <link rel="stylesheet" href="{{ $styles.Permalink }}" integrity="{{ $styles.Data.Integrity }}">
     {{ end -}}
+    <link rel="stylesheet" href="/css/glightbox.min.css">
 
     <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
