--- a/themes/occb/layouts/shortcodes/figure.html
+++ b/themes/occb/layouts/shortcodes/figure.html
@@ -1,6 +1,11 @@
 <figure{{ with .Get "class" }} class="{{ . }}"{{ end }}>
-    {{- if .Get "link" -}}
-        <a href="{{ .Get "link" }}"{{ with .Get "target" }} target="{{ . }}"{{ end }}{{ with .Get "rel" }} rel="{{ . }}"{{ end }}{{ with .Get "glightboxclass" }} class="{{ . }}"{{ end }}>
+    
+    {{- if (isset .Params "glightboxclass")}}
+            <a href="{{ replace (.Get "src") "/t_inline_pic/" "/" }}"{{ with .Get "glightboxclass" }} class="{{ . }}"{{ end }}>
+    {{- else -}}
+        {{- if .Get "link" -}}
+        <a href="{{ replace (.Get "link") "e" "a" }}"{{ with .Get "target" }} target="{{ . }}"{{ end }}{{ with .Get "rel" }} rel="{{ . }}"{{ end }}{{ with .Get "glightboxclass" }} class="{{ . }}"{{ end }}>
+        {{- end -}}
     {{- end -}}
     <img src="{{ .Get "src" }}"
          {{- if or (.Get "alt") (.Get "caption") }}
@@ -10,7 +15,7 @@
          {{- with .Get "width" }} width="{{ . }}"{{ end -}}
          {{- with .Get "height" }} height="{{ . }}"{{ end -}}
     /><!-- Closing img tag -->
-    {{- if .Get "link" }}</a>{{ end -}}
+    {{- if or (.Get "link") (.Get "glightboxclass")}}</a>{{ end -}}
     {{- if or (or (.Get "title") (.Get "caption")) (.Get "attr") -}}
         <figcaption>
             {{ with (.Get "title") -}}
